--- a/Admin Interface/AdminInterface/AdminInterface/Views/Shared/_Layout.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <!--<link rel="stylesheet" href="~/css/site.css" />-->
     <link rel="stylesheet" href="../../css/site.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body onload="setupPage()">
 
