--- a/Admin Interface/AdminInterface/AdminInterface/Views/Shared/_Layout.cshtml
+++ b/Admin Interface/AdminInterface/AdminInterface/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                     <span id="navPage6" class="navbarPageSpan"><a asp-area="" asp-controller="Reviews" asp-action="Index">Reviews</a></span>
                     <!--
                     -->
-                    <span id="navPage7" class="navbarPageSpan"><a>Logout</a></span>
+                    <span id="navPage7" class="navbarPageSpan"><a asp-area="" asp-controller="Logout" asp-action="Index">Logout</a></span>
                 </div>
             </div>
 
